corrected off centered header

--- a/css/index.css
+++ b/css/index.css
@@ -219,11 +219,11 @@ body {
   .hCoNameStyle {
     font-size: 3.6rem;
     width: 100%;
-    margin-left: 10%;
+    margin-left: 25%;
     margin-top: -2%;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .hCoNameStyle {
     font-size: 2.8rem;
     margin-left: 5%;
@@ -743,11 +743,11 @@ header .logoCompanyNameWrap .companyName {
   header .logoCompanyNameWrap .companyName {
     font-size: 3.6rem;
     width: 100%;
-    margin-left: 10%;
+    margin-left: 25%;
     margin-top: -2%;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   header .logoCompanyNameWrap .companyName {
     font-size: 2.8rem;
     margin-left: 5%;
