--- a/less/mixins.less
+++ b/less/mixins.less
@@ -29,11 +29,11 @@
    @media @tablet {
     font-size: 3.6rem;
     width: 100%;
-    margin-left: 10%;
+    margin-left: 25%;
     margin-top: -2%;
 
 }
-  @media @phone {
+  @media @phoneRespHeroBtn {
       font-size: 2.8rem;
       margin-left: 5%;
   }
